--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -31,7 +31,7 @@
                     Wellness laundry detergent infused with rose quartz microcrystals.
                 </p>
                 <div class="hero-ctas">
-                    <a href="/pages/products" class="btn-primary">Shop</a>
+                    <a href="/pages/catalog" class="btn-primary">Shop</a>
                     <a href="#about" class="btn-secondary" onclick="scrollToSection('about'); return false;">Learn More</a>
                 </div>
             </div>
