--- a/snippets/add-to-cart-button.liquid
+++ b/snippets/add-to-cart-button.liquid
@@ -14,7 +14,7 @@
   aria-label="Add to cart">
   <span class="btn-text">
     {% if is_available %}
-      + Add to bag
+      Add to cart
     {% else %}
       Sold Out
     {% endif %}
