--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -8,7 +8,7 @@
                 <img src="{{ 'LOVE_1.png' | file_img_url: 'master' }}" alt="{{ shop.name }}">
             {% endif %}
                 <p class="footer-description">
-                    The world's first rose quartz infused laundry detergent.
+                    The world's first rose quartz infused laundry detergent. Laundry care that's good for you and the planet.
                 </p>
             </div>
             <div class="footer-section">
