--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -26,17 +26,15 @@
                 <div class="footer-links">
                     <a href="/collections/frontpage" class="footer-link">Home page</a>
                     <a href="/pages/how-it-works" class="footer-link">How It Works</a>
-                    <a href="/blogs/news" class="footer-link">Blog</a>
                     <a href="/pages/contact" class="footer-link">Contact</a>
                 </div>
             </div>
             <div class="footer-section">
                 <h4 class="footer-section-title">Support</h4>
                 <div class="footer-links">
-                    <a href="/pages/faq" class="footer-link">FAQ</a>
                     <a href="/pages/shipping" class="footer-link">Shipping</a>
                     <a href="/pages/returns" class="footer-link">Returns</a>
-                    <a href="/policies/privacy-policy" class="footer-link">Privacy Policy</a>
+                    <a href="/pages/privacy-policy" class="footer-link">Privacy Policy</a>
                 </div>
             </div>
         </div>
