feat: Add redirect functionality for wholesale registration and create registration page

--- a/templates/page.mastercase.liquid
+++ b/templates/page.mastercase.liquid
@@ -84,6 +84,7 @@
                                     data-package="starter"
                                     data-price="229"
                                     data-name="Master Case"
+                                    data-redirect-url="/pages/wholesale-register"
                                     data-variant-id="{{ master_case_product.selected_or_first_available_variant.id }}">
                                 Add to Cart
                             </button>
@@ -92,6 +93,7 @@
                                     data-package="starter"
                                     data-price="229"
                                     data-name="Master Case"
+                                    data-redirect-url="/pages/wholesale-register"
                                     data-variant-id="REPLACE_WITH_VARIANT_ID">
                                 Add to Cart
                             </button>
