feat: Update Sami embed for wholesale registration page

--- a/templates/page.wholesale-register.liquid
+++ b/templates/page.wholesale-register.liquid
@@ -31,8 +31,8 @@
         </p>
       {% endunless %}
 
-      <!-- Sami embed -->
-      {SamitaWSRegistrationForm:MTEwOTY=}
+      <!-- Sami embed (Samita) -->
+      <div class="samitaWS-registrationForm" data-id="MTEwOTY="></div>
     {% endif %}
   </div>
 </section>
