--- a/templates/page.wholesale-page.liquid
+++ b/templates/page.wholesale-page.liquid
@@ -13,7 +13,7 @@
       </p>
 
       <!-- Samita quick order (visible only for approved wholesale accounts) -->
-      <div class="samitaWS-quickOrderForm" data-id="bmV3"></div>
+      <div class='samitaWS-quickOrderForm' data-id='bmV3'></div>
 
       <div style="margin-top: 32px; display:flex; gap:12px; justify-content:center; flex-wrap:wrap;">
         <a class="btn-secondary btn-large" href="/pages/mastercase">View Master Case Program</a>
